WEB-108: ECS Hosting changes