@@ -1,9 +1,12 @@
 package cricket.merstham.shared.helpers;
 
+import java.io.ByteArrayInputStream;
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.security.KeyFactory;
@@ -22,8 +25,13 @@ public class KeyHelper {
 
     public static PrivateKey loadPrivateKeyFromFile(String keyFilename)
             throws IOException, NoSuchAlgorithmException, InvalidKeySpecException {
-        String key = new String(Files.readAllBytes(Path.of(keyFilename)), Charset.defaultCharset());
+        String key = Files.readString(Path.of(keyFilename), Charset.defaultCharset());
 
+        return loadPrivateKeyFromString(key);
+    }
+
+    public static PrivateKey loadPrivateKeyFromString(String key)
+            throws NoSuchAlgorithmException, InvalidKeySpecException {
         String stripped =
                 key.replace("-----BEGIN PRIVATE KEY-----", "") // pragma: allowlist secret
                         .replaceAll(System.lineSeparator(), "")
@@ -41,5 +49,12 @@ public class KeyHelper {
         CertificateFactory fact = CertificateFactory.getInstance("X.509");
         FileInputStream is = new FileInputStream(certificateFilename);
         return (X509Certificate) fact.generateCertificate(is);
+    }
+
+    public static X509Certificate loadCertificateFromString(String content)
+            throws CertificateException {
+        CertificateFactory fact = CertificateFactory.getInstance("X.509");
+        InputStream stream = new ByteArrayInputStream(content.getBytes(StandardCharsets.UTF_8));
+        return (X509Certificate) fact.generateCertificate(stream);
     }
 }
